config/firewall/iptables.rules
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Dec 21 22:05:35 2025
*raw
:PREROUTING ACCEPT [7291125:3932029458]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 10.0.3.2/32 ! -i br-ba69d4af5346 -j DROP
-A PREROUTING -d 10.0.3.3/32 ! -i br-ba69d4af5346 -j DROP
-A PREROUTING -d 10.0.4.3/32 ! -i br-46ab93b99ed9 -j DROP
-A PREROUTING -d 10.0.1.2/32 ! -i br-0f57667091a0 -j DROP
-A PREROUTING -d 10.0.2.2/32 ! -i br-e90cf653637d -j DROP
-A PREROUTING -d 10.0.4.2/32 ! -i br-46ab93b99ed9 -j DROP
-A PREROUTING -d 172.22.1.2/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 172.22.1.3/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 172.22.1.248/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 172.22.1.254/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 172.22.1.4/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 172.22.1.249/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 7654 -j DROP
-A PREROUTING -d 172.22.1.5/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 13306 -j DROP
-A PREROUTING -d 172.22.1.250/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 172.22.1.6/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 19991 -j DROP
-A PREROUTING -d 172.22.1.7/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 172.22.1.8/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 172.22.1.9/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 172.22.1.10/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 172.22.1.11/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 172.22.1.253/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 172.22.1.12/32 ! -i br-mailcow -j DROP
-A PREROUTING -d 172.22.1.13/32 ! -i br-mailcow -j DROP
COMMIT
# Completed on Sun Dec 21 22:05:35 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Dec 21 22:05:35 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [2:104]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
:MAILCOW - [0:0]
-A FORWARD -m comment --comment mailcow -j MAILCOW
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER -d 172.22.1.253/32 ! -i br-mailcow -o br-mailcow -p tcp -m tcp --dport 587 -j ACCEPT
-A DOCKER -d 172.22.1.253/32 ! -i br-mailcow -o br-mailcow -p tcp -m tcp --dport 465 -j ACCEPT
-A DOCKER -d 172.22.1.253/32 ! -i br-mailcow -o br-mailcow -p tcp -m tcp --dport 25 -j ACCEPT
-A DOCKER -d 172.22.1.11/32 ! -i br-mailcow -o br-mailcow -p tcp -m tcp --dport 8443 -j ACCEPT
-A DOCKER -d 172.22.1.11/32 ! -i br-mailcow -o br-mailcow -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.22.1.250/32 ! -i br-mailcow -o br-mailcow -p tcp -m tcp --dport 12345 -j ACCEPT
-A DOCKER -d 172.22.1.250/32 ! -i br-mailcow -o br-mailcow -p tcp -m tcp --dport 4190 -j ACCEPT
-A DOCKER -d 172.22.1.250/32 ! -i br-mailcow -o br-mailcow -p tcp -m tcp --dport 995 -j ACCEPT
-A DOCKER -d 172.22.1.250/32 ! -i br-mailcow -o br-mailcow -p tcp -m tcp --dport 993 -j ACCEPT
-A DOCKER -d 172.22.1.250/32 ! -i br-mailcow -o br-mailcow -p tcp -m tcp --dport 143 -j ACCEPT
-A DOCKER -d 172.22.1.250/32 ! -i br-mailcow -o br-mailcow -p tcp -m tcp --dport 110 -j ACCEPT
-A DOCKER -d 172.22.1.5/32 ! -i br-mailcow -o br-mailcow -p tcp -m tcp --dport 3306 -j ACCEPT
-A DOCKER -d 172.22.1.249/32 ! -i br-mailcow -o br-mailcow -p tcp -m tcp --dport 6379 -j ACCEPT
-A DOCKER -d 10.0.2.2/32 ! -i br-e90cf653637d -o br-e90cf653637d -p udp -m udp --dport 443 -j ACCEPT
-A DOCKER -d 10.0.2.2/32 ! -i br-e90cf653637d -o br-e90cf653637d -p tcp -m tcp --dport 443 -j ACCEPT
-A DOCKER -d 10.0.2.2/32 ! -i br-e90cf653637d -o br-e90cf653637d -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER -d 10.0.1.2/32 ! -i br-0f57667091a0 -o br-0f57667091a0 -p tcp -m tcp --dport 19999 -j ACCEPT
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER ! -i br-46ab93b99ed9 -o br-46ab93b99ed9 -j DROP
-A DOCKER ! -i br-ba69d4af5346 -o br-ba69d4af5346 -j DROP
-A DOCKER ! -i br-mailcow -o br-mailcow -j DROP
-A DOCKER ! -i br-0f57667091a0 -o br-0f57667091a0 -j DROP
-A DOCKER ! -i br-e90cf653637d -o br-e90cf653637d -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-BRIDGE -o br-46ab93b99ed9 -j DOCKER
-A DOCKER-BRIDGE -o br-ba69d4af5346 -j DOCKER
-A DOCKER-BRIDGE -o br-mailcow -j DOCKER
-A DOCKER-BRIDGE -o br-0f57667091a0 -j DOCKER
-A DOCKER-BRIDGE -o br-e90cf653637d -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-46ab93b99ed9 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-ba69d4af5346 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-mailcow -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-0f57667091a0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-e90cf653637d -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-FORWARD -i br-46ab93b99ed9 -j ACCEPT
-A DOCKER-FORWARD -i br-ba69d4af5346 -j ACCEPT
-A DOCKER-FORWARD -i br-mailcow -j ACCEPT
-A DOCKER-FORWARD -i br-0f57667091a0 -j ACCEPT
-A DOCKER-FORWARD -i br-e90cf653637d -j ACCEPT
-A MAILCOW -s 217.245.130.183/32 -j DROP
-A MAILCOW -s 217.245.130.183/32 -j DROP
-A MAILCOW -s 217.245.130.183/32 -j DROP
-A MAILCOW ! -i br-mailcow -o br-mailcow -p tcp -m comment --comment "mailcow isolation" -j DROP
COMMIT
# Completed on Sun Dec 21 22:05:35 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Dec 21 22:05:35 2025
*nat
:PREROUTING ACCEPT [295505:17954218]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [289890:27472821]
:POSTROUTING ACCEPT [986196:72231191]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 10.0.2.0/24 ! -o br-e90cf653637d -j MASQUERADE
-A POSTROUTING -s 10.0.1.0/24 ! -o br-0f57667091a0 -j MASQUERADE
-A POSTROUTING -s 172.22.1.0/24 ! -o br-mailcow -j MASQUERADE
-A POSTROUTING -s 10.0.3.0/24 ! -o br-ba69d4af5346 -j MASQUERADE
-A POSTROUTING -s 10.0.4.0/24 ! -o br-46ab93b99ed9 -j MASQUERADE
-A POSTROUTING -s 10.0.0.0/24 ! -o docker0 -j MASQUERADE
-A DOCKER ! -i br-0f57667091a0 -p tcp -m tcp --dport 19999 -j DNAT --to-destination 10.0.1.2:19999
-A DOCKER ! -i br-e90cf653637d -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.0.2.2:80
-A DOCKER ! -i br-e90cf653637d -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.0.2.2:443
-A DOCKER ! -i br-e90cf653637d -p udp -m udp --dport 443 -j DNAT --to-destination 10.0.2.2:443
-A DOCKER -d 127.0.0.1/32 ! -i br-mailcow -p tcp -m tcp --dport 7654 -j DNAT --to-destination 172.22.1.249:6379
-A DOCKER -d 127.0.0.1/32 ! -i br-mailcow -p tcp -m tcp --dport 13306 -j DNAT --to-destination 172.22.1.5:3306
-A DOCKER ! -i br-mailcow -p tcp -m tcp --dport 110 -j DNAT --to-destination 172.22.1.250:110
-A DOCKER ! -i br-mailcow -p tcp -m tcp --dport 143 -j DNAT --to-destination 172.22.1.250:143
-A DOCKER ! -i br-mailcow -p tcp -m tcp --dport 993 -j DNAT --to-destination 172.22.1.250:993
-A DOCKER ! -i br-mailcow -p tcp -m tcp --dport 995 -j DNAT --to-destination 172.22.1.250:995
-A DOCKER ! -i br-mailcow -p tcp -m tcp --dport 4190 -j DNAT --to-destination 172.22.1.250:4190
-A DOCKER -d 127.0.0.1/32 ! -i br-mailcow -p tcp -m tcp --dport 19991 -j DNAT --to-destination 172.22.1.250:12345
-A DOCKER ! -i br-mailcow -p tcp -m tcp --dport 8080 -j DNAT --to-destination 172.22.1.11:8080
-A DOCKER ! -i br-mailcow -p tcp -m tcp --dport 8443 -j DNAT --to-destination 172.22.1.11:8443
-A DOCKER ! -i br-mailcow -p tcp -m tcp --dport 25 -j DNAT --to-destination 172.22.1.253:25
-A DOCKER ! -i br-mailcow -p tcp -m tcp --dport 465 -j DNAT --to-destination 172.22.1.253:465
-A DOCKER ! -i br-mailcow -p tcp -m tcp --dport 587 -j DNAT --to-destination 172.22.1.253:587
COMMIT
# Completed on Sun Dec 21 22:05:35 2025
